@@ -1,3 +1,8 @@
+2007-02-07  Nathaniel Smith  <njs@pobox.com>
+
+	* tests/ls_unknown_in_subdir: Update test to match new
+	non-recursiveness of ls unknown.
+
 2007-02-07  Daniel Carosone  <dan@geek..com.au>
 
 	* tests/db_kill_rev_and_recommit/__driver__.lua/: add a test
